Import Pixyll theme (johnotander/pixyll@be6affe)

--- a/404.md
+++ b/404.md
@@ -1,9 +1,13 @@
 ---
-layout: page
-title: Page Not Found
-footer: false
+layout: center
+permalink: /404.html
 ---
 
-Oops, I couldn't find that page! Sorry about that.
+# 404
 
-Maybe try the search box (top right), or look through the [archives](/archives/)?
+Sorry, we can't seem to find this page's pixylls.
+
+<div class="mt3">
+  <a href="{{ site.baseurl }}/" class="button button-blue button-big">Home</a>
+  <a href="{{ site.baseurl }}/contact/" class="button button-blue button-big">Contact</a>
+</div>
